Fix InTheRough header letter-spacing

--- a/src/pages/in-the-rough/InTheRough.module.scss
+++ b/src/pages/in-the-rough/InTheRough.module.scss
@@ -23,6 +23,10 @@
   font-size: 20px;
   letter-spacing: 1px;
 
+  h2 {
+    letter-spacing: normal;
+  }
+
   p {
     margin-bottom: 30px;
   }
